--- a/jekyll/_config.yml
+++ b/jekyll/_config.yml
@@ -6,16 +6,15 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: James McGuigan
+email: james.mcguigan.personal@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Sometimes I like to try out new things, here are some of my experiments
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://jamesmcguigan.com" # the base hostname & protocol for your site
+twitter_username:
+github_username:  JamesMcGuigan
+linkedin_username:  JamesMcGuigan
 
 # Build settings
 markdown: kramdown
