--- a/jekyll/_config.yml
+++ b/jekyll/_config.yml
@@ -6,15 +6,16 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: James McGuigan
-email: james.mcguigan.personal@gmail.com
+title: James McGuigan - Computer Scientist
+email: james.mcguigan+homepage@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Sometimes I like to try out new things, here are some of my experiments
+  Sometimes I like to try new things, here are some of my ideas and experiments
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://jamesmcguigan.com" # the base hostname & protocol for your site
 twitter_username:
 github_username:  JamesMcGuigan
 linkedin_username:  JamesMcGuigan
+email_username:  JamesMcGuigan
 
 # Build settings
 markdown: kramdown
