--- a/package.json
+++ b/package.json
@@ -4,7 +4,16 @@
   "description": "Website files for jamesmcguigan.com",
   "repository": "https://github.com/JamesMcGuigan/jamesmcguigan.com",
   "dependencies": {
+    "babel": "^6.5.2",
+    "css-loader": "^0.25.0",
     "csv": "^1.1.0",
-    "lodash": "^4.16.4"
+    "eventsource-polyfill": "^0.9.6",
+    "lodash": "^4.16.4",
+    "node-sass": "^3.10.1",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "ts-loader": "^0.9.5",
+    "webpack": "^1.13.2",
+    "webpack-hot-middleware": "^2.13.0"
   }
 }
