--- a/package.json
+++ b/package.json
@@ -4,24 +4,42 @@
   "description": "Website files for jamesmcguigan.com",
   "repository": "https://github.com/JamesMcGuigan/jamesmcguigan.com",
   "dependencies": {
-    "angular2": "^2.0.0-beta.17",
+    "angular2": "2.0.0-beta.17",
     "d3": "^4.2.8",
     "jquery": "^3.1.1",
     "lodash": "^4.16.4",
     "moment": "^2.15.1"
   },
   "devDependencies": {
+    "@angularclass/hmr-loader": "^3.0.2",
+    "angular2-hmr": "^0.8.1",
+    "angular2-hmr-loader": "^3.0.2",
+    "angular2-template-loader": "^0.5.0",
+    "awesome-typescript-loader": "^2.2.4",
     "babel": "^6.5.2",
+    "babel-loader": "^6.2.5",
     "css-loader": "^0.25.0",
     "csv": "^1.1.0",
+    "es6-shim": "^0.35.0",
+    "eslint": "^3.8.1",
+    "eslint-plugin-lodash": "^2.1.6",
     "eventsource-polyfill": "^0.9.6",
     "lodash": "^4.16.4",
     "node-sass": "^3.10.1",
+    "npm-install-peers": "^1.0.1-rc.3",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "^5.0.0-beta.6",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "symbol-observable": "1.0.4",
     "ts-loader": "^0.9.5",
-    "webpack": "^1.13.2",
+    "typings": "^1.4.0",
+    "webpack": "2.1.0-beta.25",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^2.1.0-beta.9",
     "webpack-hot-middleware": "^2.13.0",
-    "typings": "^1.4.0"
+    "webpack-md5-hash": "^0.0.5",
+    "webpack-merge": "^0.15.0",
+    "zone.js": "^0.6.10"
   }
 }
