--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Website files for jamesmcguigan.com",
   "repository": "https://github.com/JamesMcGuigan/jamesmcguigan.com",
   "dependencies": {
+    "angular": "^1.5.8",
     "angular2": "2.0.0-beta.17",
     "d3": "^4.2.8",
     "jquery": "^3.1.1",
@@ -33,6 +34,8 @@
     "style-loader": "^0.13.1",
     "symbol-observable": "1.0.4",
     "ts-loader": "^0.9.5",
+    "typescript": "^2.0.3",
+    "typescript-eslint-parser": "^0.4.0",
     "typings": "^1.4.0",
     "webpack": "2.1.0-beta.25",
     "webpack-dev-middleware": "^1.6.1",
