--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,11 +3,14 @@
     "eslint": "http://eslint.org/docs/user-guide/configuring#adding-shared-settings",
     "lodash": "https://www.npmjs.com/package/eslint-plugin-lodash"
   },
-  "extends": "eslint:recommended",
+  "extends": [
+    "eslint:recommended"
+  ],
   "env": {
     "browser": true,
     "jquery": true,
-    "node": true
+    "node": true,
+    "es6":  true
   },
   "parser": "typescript-eslint-parser",
   "parserOptions": {
@@ -76,6 +79,7 @@
     "lodash/preferred-alias": 0
   },
   "globals": {
+    "__dirname"   : false,
     "$"           : false,
     "_"           : false,
     "__insp"      : false,
