--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,9 @@ source:      ./jekyll/
 destination: ./jekyll-static/
 
 # Site settings
-title: James McGuigan - Computer Scientist
+title: James McGuigan - Javascript Architect
 email: james.mcguigan.cv@gmail.com
+cv:    https://www.dropbox.com/s/a74hgf04ebki3mm/james-mcguigan-cv-2016-10-telleroo.pdf
 description: > # this means to ignore newlines until "baseurl:"
   Sometimes I like to try new things, here are some of my ideas and experiments
 baseurl: "" # the subpath of your site, e.g. /blog
