--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "1.0.0",
   "description": "Website files for jamesmcguigan.com",
   "repository": "https://github.com/JamesMcGuigan/jamesmcguigan.com",
+  "scripts": {
+    "postinstall":   "bundle install",
+    "build":         "jekyll build; webpack",
+    "production":    "jekyll clean; jekyll build; webpack --optimize-dedupe --optimize-minimize",
+    "serve-jekyll":  "jekyll clean; webpack; jekyll serve --incremental --watch",
+    "serve-webpack": "jekyll clean; jekyll build --incremental --watch & webpack-dev-server",
+    "start":         "npm run serve-jekyll"
+  },
   "babel": {
     "presets": [
       "es2015",
